--- a/Random_Forest_Regresion.ipynb
+++ b/Random_Forest_Regresion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Librerias"
+    "# Librerias Random Forest regresión:"
    ]
   },
   {
@@ -67,6 +67,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reto: \n",
+    "La base de Dato contiene precios de viviendas de la ciudad de Boston, así como información socio-económica del barrio en el que se encuentran. Se pretende ajustar un modelo de regresión que permita predecir el precio medio de una vivienda (MEDV) en función de las variables disponibles."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -115,6 +123,47 @@
    "source": [
     "print(Boston.head())\n",
     "print(Boston.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " El set de datos Boston contiene precios de viviendas de la ciudad de Boston, así como información socio-económica del barrio en el que se encuentran. Se pretende ajustar un modelo de regresión que permita predecir el precio medio de una vivienda (MEDV) en función de las variables disponibles.\n",
+    "\n",
+    "Número de instancias: 506\n",
+    "\n",
+    "Número de atributos: 13 predictivos numéricos/categoriales.\n",
+    "\n",
+    "Información de los atributos (por orden):\n",
+    "\n",
+    "* CRIM: tasa de delincuencia per cápita por ciudad.\n",
+    "\n",
+    "* ZN: proporción de suelo residencial dividido para segmentos de más de 25.000 pies cuadrados.\n",
+    "\n",
+    "* INDUS: proporción de superficie comerciales no minoristas por ciudad.\n",
+    "\n",
+    "* CHAS: variable binaria sobre el río Charles (= 1 si la zona linda con el río; 0 en caso contrario).\n",
+    "\n",
+    "* NOX: concentración de óxidos nítricos (partes por 10 millones).\n",
+    "\n",
+    "* RM: número medio de habitaciones por vivienda.\n",
+    "\n",
+    "* EDAD: proporción de viviendas ocupadas construidas antes de 1940.\n",
+    "\n",
+    "* DIS: distancia ponderada a cinco centros de empleo en la ciudad de Boston.\n",
+    "\n",
+    "* RAD: índice de accesibilidad a las autopistas radiales.\n",
+    "\n",
+    "* TAX: impuesto sobre bienes inmuebles de valor íntegro por cada 10.000$.\n",
+    "\n",
+    "* PTRATIO: ratio alumnos-profesor por ciudad.\n",
+    "\n",
+    "* LSTAT: % de la población considerado de clase baja.\n",
+    "\n",
+    "* MEDV: valor medio de las viviendas ocupadas por sus propietarios en miles de $.\n",
+    "\n",
+    "Valores ausentes: Ninguno"
    ]
   },
   {
