finaliza el doc, pendiente ver advertencia de desaprobacion

--- a/Random_Forest_Regresion.ipynb
+++ b/Random_Forest_Regresion.ipynb
@@ -163,7 +163,10 @@
     "\n",
     "* MEDV: valor medio de las viviendas ocupadas por sus propietarios en miles de $.\n",
     "\n",
-    "Valores ausentes: Ninguno"
+    "Valores ausentes: Ninguno\n",
+    "\n",
+    "Ajuste del modelo\n",
+    "Se ajusta un modelo empleando como variable respuesta MEDV y como predictores todas las otras variables disponibles"
    ]
   },
   {
@@ -633,6 +636,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "El modelo inicial se ha entrenado utilizando 10 árboles (n_estimators=10) y manteniendo el resto de hiperparámetros con su valor por defecto. Al ser hiperparámetros, no se puede saber de antemano cuál es el valor más adecuado, la forma de identificarlos es mediante el uso de estrategias de validación, por ejemplo validación cruzada.\n",
+    "\n",
+    "Los modelos Random Forest tienen la ventaja de disponer del Out-of-Bag error, lo que permite obtener una estimación del error de test sin recurrir a la validación cruzada, que es computacionalmente costosa. En la implementación de RandomForestRegressor, la métrica devuelta como oob_score es el  R2\n",
+    " , si se desea otra, se tiene que recurrir al método oob_decision_function_() para obtener las predicciones y con ellas calcular la métrica de interés. Para una explicación más detallada consultar: Grid search de modelos Random Forest con out-of-bag error y early stopping.\n",
+    "\n",
+    "Cabe tener en cuenta que, cuando se busca el valor óptimo de un hiperparámetro con dos métricas distintas, el resultado obtenido raramente es el mismo. Lo importante es que ambas métricas identifiquen las mismas regiones de interés."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Predicción y evaluación del modelo\n",
     "\n",
     "Teniendo el modelo, se evalúa la capacidad predictiva empleando el conjunto de test."
@@ -733,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3080,7 +3095,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Grid search"
+    "# Grid search\n",
+    "\n",
+    "Aunque el análisis individual de los hiperparámetros es útil para entender su impacto en el modelo e identificar rangos de interés, la búsqueda final no debe hacerse de forma secuencial, ya que cada hiperparámetro interacciona con los demás. Es preferible recurrir a grid search, random search o bayesian search para analizar varias combinaciones de hiperparámetros. Puede encontrarse más información sobre las estrategias de búsqueda en Machine learning con Python y Scikit-learn."
    ]
   },
   {
@@ -3500,7 +3517,7 @@
    ],
    "source": [
     "# Grid de hiperparámetros evaluados\n",
-    "# ==============================================================================\n",
+    "\n",
     "param_grid = ParameterGrid(\n",
     "                {'n_estimators': [150],\n",
     "                 'max_features': [5, 7, 9],\n",
@@ -3509,7 +3526,7 @@
     "             )\n",
     "\n",
     "# Loop paralelizado para ajustar un modelo con cada combinación de hiperparámetros\n",
-    "# ==============================================================================\n",
+    "\n",
     "def eval_oob_error(X, y, params, verbose=True):\n",
     "    \"\"\"\n",
     "    Función para entrenar un modelo utilizando unos parámetros determinados\n",
@@ -3535,7 +3552,7 @@
     "             )\n",
     "\n",
     "# Resultados\n",
-    "# ==============================================================================\n",
+    "\n",
     "resultados = pd.DataFrame(resultados)\n",
     "resultados = pd.concat([resultados, resultados['params'].apply(pd.Series)], axis=1)\n",
     "resultados = resultados.drop(columns = 'params')\n",
